# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: lint-test-check.yml  lint-test.yml
page_analyzer/: app.py  db.py  parser.py  utils.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
tests/: app.py
